Bug 104538 - [IGT] kms_cursor_legacy --r *2x* execution stops on next test after FAIL
Summary: [IGT] kms_cursor_legacy --r *2x* execution stops on next test after FAIL
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Maarten Lankhorst
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-08 10:26 UTC by Jari Tahvanainen
Modified: 2018-04-20 11:01 UTC (History)
1 user (show)

See Also:
i915 platform: CFL, SKL
i915 features: display/Other


Attachments
--debug output with igt-commit cb43735cab7 (5.37 MB, text/plain)
2018-01-08 10:26 UTC, Jari Tahvanainen
no flags Details
--debug output with igt-commit d86d53b072b (6.52 MB, text/plain)
2018-01-08 10:28 UTC, Jari Tahvanainen
no flags Details
CFL-Kern-Log (160.35 MB, text/plain)
2018-01-29 21:12 UTC, Ricardo Perez
no flags Details

Description Jari Tahvanainen 2018-01-08 10:26:56 UTC
Created attachment 136611 [details]
--debug output with igt-commit cb43735cab7

The change on igt-commit d86d53b072b is causing the new FAIL 

(kms_cursor_legacy:18758) CRITICAL: Test assertion failure function two_screens_flip_vs_cursor, file kms_cursor_legacy.c:1013:
(kms_cursor_legacy:18758) CRITICAL: Failed assertion: vblank_matches
(kms_cursor_legacy:18758) CRITICAL: Last errno: 16, Device or resource busy
(kms_cursor_legacy:18758) CRITICAL: During modeset at least 1 page flip needs to match!
(kms_cursor_legacy:18758) igt-core-INFO: Stack trace:
(kms_cursor_legacy:18758) igt-core-INFO:   #0 [__igt_fail_assert+0x101]
(kms_cursor_legacy:18758) igt-core-INFO:   #1 [two_screens_flip_vs_cursor+0x8fe]
(kms_cursor_legacy:18758) igt-core-INFO:   #2 [__real_main1369+0xbee]
(kms_cursor_legacy:18758) igt-core-INFO:   #3 [main+0x27]
(kms_cursor_legacy:18758) igt-core-INFO:   #4 [__libc_start_main+0xf1]
(kms_cursor_legacy:18758) igt-core-INFO:   #5 [_start+0x2a]
(kms_cursor_legacy:18758) igt-core-INFO:   #6 [<unknown>+0x2a]
****  END  ****
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [two_screens_flip_vs_cursor+0x8fe]
  #2 [__real_main1369+0xbee]
  #3 [main+0x27]
  #4 [__libc_start_main+0xf1]
  #5 [_start+0x2a]
  #6 [<unknown>+0x2a]
Subtest 2x-nonblocking-modeset-vs-cursor-atomic: FAIL (1.094s)

and igt to hang on execution of the next test.
(kms_cursor_legacy:18758) igt-core-DEBUG: Starting subtest: 2x-cursor-vs-flip-atomic
...
(kms_cursor_legacy:18758) igt-kms-DEBUG: Test requirement passed: plane_idx >= 0 && plane_idx < pipe->n_planes
(kms_cursor_legacy:18758) igt-kms-DEBUG: display: B.0: plane_set_fb(124)
(kms_cursor_legacy:18758) igt-kms-DEBUG: display: B.0: plane_set_size (1920x1200)
(kms_cursor_legacy:18758) igt-kms-DEBUG: display: B.0: fb_set_position(0,0)
(kms_cursor_legacy:18758) igt-kms-DEBUG: display: B.0: fb_set_size(1920x1200)
(kms_cursor_legacy:18758) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:18758) igt-kms-DEBUG: display:     populating plane data: B.0, fb 124
(kms_cursor_legacy:18758) igt-kms-DEBUG: plane B.0: Setting property "SRC_X" 
(kms_cursor_legacy:18902) DEBUG: child 0: 3515 cursor updates
(kms_cursor_legacy:18903) DEBUG: child 1: 3518 cursor updates

IGT executions stops on above "step" on next test, in this case 2x-cursor-vs-flip-atomic.

On --debug logs (see attachments), the main difference seems to be
pipe(kms_cursor_legacy:18605) DEBUG: child 0: 6628 cursor updates
(kms_cursor_legacy:18606) DEBUG: child 1: 6662 cursor updates
->n_planes
vs.
(kms_cursor_legacy:10997) igt-kms-DEBUG: plane B.0: Setting property "SRC_X" t(kms_cursor_legacy:11195) DEBUG: child 0: 8033 cursor updates
(kms_cursor_legacy:11196) DEBUG: child 1: 5988 cursor updates
o 0x0/0
with igt-commit cb43735cab7 where igt execution hang does not happen.

Latter works after FAIL case, 1st hangs on next test after FAIL, when using 
sudo ./kms_cursor_legacy --debug --r '*2x*'
on SKL with two displays attached
Connectors:
id      encoder status          type    size (mm)       modes
59      0       disconnected    HDMI-A  0x0             0
64      63      connected       HDMI-A  520x320         21
66      65      connected       DP      520x320         12
Comment 1 Jari Tahvanainen 2018-01-08 10:28:57 UTC
Created attachment 136612 [details]
--debug output with igt-commit d86d53b072b
Comment 2 Ricardo Perez 2018-01-29 21:12:49 UTC
Created attachment 137037 [details]
CFL-Kern-Log

CoffeeLake S UDIMM RVP Kernel Log File
Comment 3 Ricardo Perez 2018-01-29 21:22:27 UTC
For CoffeeLake S UDIMM RVP QA system, the following test is failing:

igt@kms_cursor_legacy@2x-nonblocking-modeset-vs-cursor-atomic

Running:
IGT-Version: 1.21-g37bd27f (x86_64) (Linux: 4.15.0-rc9-drm-intel-qa-ww4-commit-59275f1+ x86_64)

**** DEBUG ****
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: commit {
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "MODE_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: Pipe B: Setting property "ACTIVE" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display:     DP-1: preparing atomic, pipe: None
(kms_cursor_legacy:14972) igt-kms-DEBUG: DP-1: Setting property "CRTC_ID" to 0x0/0
(kms_cursor_legacy:14972) igt-kms-DEBUG: display: }
(kms_cursor_legacy:14972) CRITICAL: Test assertion failure function two_screens_flip_vs_cursor, file kms_cursor_legacy.c:1013:
(kms_cursor_legacy:14972) CRITICAL: Failed assertion: vblank_matches
(kms_cursor_legacy:14972) CRITICAL: Last errno: 25, Inappropriate ioctl for device
(kms_cursor_legacy:14972) CRITICAL: During modeset at least 1 page flip needs to match!
(kms_cursor_legacy:14972) igt-core-INFO: Stack trace:
(kms_cursor_legacy:14972) igt-core-INFO:   #0 [__igt_fail_assert+0x101]
(kms_cursor_legacy:14972) igt-core-INFO:   #1 [two_screens_flip_vs_cursor+0x8ce]
(kms_cursor_legacy:14972) igt-core-INFO:   #2 [__real_main1369+0xbee]
(kms_cursor_legacy:14972) igt-core-INFO:   #3 [main+0x27]
(kms_cursor_legacy:14972) igt-core-INFO:   #4 [__libc_start_main+0xf1]
(kms_cursor_legacy:14972) igt-core-INFO:   #5 [_start+0x2a]
(kms_cursor_legacy:14972) igt-core-INFO:   #6 [<unknown>+0x2a]
****  END  ****
Comment 4 Hector Velazquez 2018-02-14 20:37:58 UTC
This test has failed on GLK QA
same result of the comment 3 

Tests List:

igt@kms_cursor_legacy@2x-nonblocking-modeset-vs-cursor-atomic

IGT-Version: 1.21-g37bd27f (x86_64) (Linux: 4.16.0-rc1-drm-intel-qa-ww7-commit-28dc2a5+ x86_64)

======================================
        output sample
======================================
. . .
(kms_cursor_legacy:12480) CRITICAL: Test assertion failure function two_screens_flip_vs_cursor, file kms_cursor_legacy.c:1013:
(kms_cursor_legacy:12480) CRITICAL: Failed assertion: vblank_matches
(kms_cursor_legacy:12480) CRITICAL: Last errno: 16, Device or resource busy
(kms_cursor_legacy:12480) CRITICAL: During modeset at least 1 page flip needs to match!
(kms_cursor_legacy:12480) igt-core-INFO: Stack trace:
(kms_cursor_legacy:12480) igt-core-INFO:   #0 [__igt_fail_assert+0x101]
(kms_cursor_legacy:12480) igt-core-INFO:   #1 [two_screens_flip_vs_cursor+0x8ce]
(kms_cursor_legacy:12480) igt-core-INFO:   #2 [__real_main1369+0xbee]
(kms_cursor_legacy:12480) igt-core-INFO:   #3 [main+0x27]
(kms_cursor_legacy:12480) igt-core-INFO:   #4 [__libc_start_main+0xf1]
(kms_cursor_legacy:12480) igt-core-INFO:   #5 [_start+0x2a]
(kms_cursor_legacy:12480) igt-core-INFO:   #6 [<unknown>+0x2a]
****  END  ****
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [two_screens_flip_vs_cursor+0x8ce]
  #2 [__real_main1369+0xbee]
  #3 [main+0x27]
  #4 [__libc_start_main+0xf1]
  #5 [_start+0x2a]
  #6 [<unknown>+0x2a]
Subtest 2x-nonblocking-modeset-vs-cursor-atomic: FAIL (1.328s)
. . .
Comment 5 Maarten Lankhorst 2018-02-15 13:24:12 UTC
This bug appears to be specifically about the next failure after the test already failed.
This is now fixed with the following commit:

commit 64c216764e059f51b653b3bbfaf4776d1903f141 (HEAD)
Author: Maarten Lankhorst <maarten.lankhorst@linux.intel.com>
Date:   Thu Feb 15 12:47:09 2018 +0100

    lib/igt_kms: Fix igt_display_drop_events() to work as intended
Comment 6 Jani Saarinen 2018-04-20 11:01:21 UTC
Closing


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.